Sum changes to the char

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,13 +174,13 @@ MRUItem0=/Game/_Level/Island
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 InputAction=
 K2Node_VariableGet=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
-DI_Player_C=
-SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,CameraComponent.TransformCommon.Transform
+DI_Player_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
+SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 BP_KronenFemale_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-BP_KronenFast_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
-BP_Kronen_C=
+BP_KronenFast_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
+BP_Kronen_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 CapsuleComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
-Character=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
+Character=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 K2Node_CallFunction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 StaticMeshActor=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision
 BP_Slugger_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup
@@ -234,13 +234,19 @@ AnimGraphNode_SequencePlayer=InputMappingContext.Mappings.ActionMappings,InputMa
 AnimGraphNode_BlendSpacePlayer=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 EdGraphNode=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup
+Bp_Knive_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 
 [EditorStartup]
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=TextureEditor
@@ -255,9 +261,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=Behavior Tree
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -265,27 +268,14 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/_Core/_Player/IF_Character.IF_Character
-OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
-OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP.Carp_AnimBP
-OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Reload_Anim.Carpenter_Rifle_Reload_Anim
 OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive.Bp_Knive
 OpenAssetsAtExit=/Game/_Core/_Enemies/BP_Kronen.BP_Kronen
-OpenAssetsAtExit=/Game/_Core/_Enemies/_Animations/ABP_KrononSlow.ABP_KrononSlow
-OpenAssetsAtExit=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy.BHT_Enemy
-OpenAssetsAtExit=/Game/_Core/_Enemies/_AiSystems/_BHT/BB_Enemy.BB_Enemy
-OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1.KronenMale_Animations_Attack1
-OpenAssetsAtExit=/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif.AttackNotif
-OpenAssetsAtExit=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_DM.Carp_DM
-OpenAssetsAtExit=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M.Carp_M
-OpenAssetsAtExit=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_50_DM.Carp_Injured_50_DM
-OpenAssetsAtExit=/Game/_Core/_Weapons/Shotgun.Shotgun
+OpenAssetsAtExit=/Game/_Core/_Enemies/BP_KronenFast.BP_KronenFast
+OpenAssetsAtExit=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim.Carpenter_Axe_Slash_Anim
+OpenAssetsAtExit=/Game/_Core/_Player/DI_Player.DI_Player
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -300,7 +290,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/_Core/_Player/_Assets/_Textures/_Textures
+ContentBrowserDrawer.SelectedPaths=/Game/_Core/BPInterfaces
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -360,36 +350,35 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Reload_Anim
-MRUItem1=/Game/_Core/_Weapons/Shotgun
-MRUItem2=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_50_DM
-MRUItem3=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_25_DM
-MRUItem4=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_75_DM
-MRUItem5=/Game/_Level/_LevelAssets/_OGFiles/blood_BaseColor
-MRUItem6=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M
-MRUItem7=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_DM
-MRUItem8=/Game/_Core/BPInterfaces/BPI_GetDamage
-MRUItem9=/Game/_Core/BPInterfaces/BPI_Player
-MRUItem10=/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif
-MRUItem11=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
-MRUItem12=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy
-MRUItem13=/Game/_Core/_Enemies/_Animations/ABP_KrononSlow
-MRUItem14=/Game/_Core/_Enemies/BP_Kronen
-MRUItem15=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
-MRUItem16=/Game/_Core/_Player/_PlayerAnimations/_Animations/Knife/Carpenter_Knife_Slash1_Anim
-MRUItem17=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim
-MRUItem18=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
-MRUItem19=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
-MRUItem20=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
-MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim
-MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
-MRUItem23=/Game/_Core/_Player/DI_Player
-MRUItem24=/Game/_Core/_Player/IF_Character
-MRUItem25=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
-MRUItem26=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
-MRUItem27=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1
-MRUItem28=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Idle1
-MRUItem29=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Death1
+MRUItem0=/Game/_Core/_Player/DI_Player
+MRUItem1=/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim
+MRUItem2=/Game/_Core/_Player/_PlayerAnimations/_Notifires/Bp_Knive
+MRUItem3=/Game/_Core/_Enemies/BP_KronenFast
+MRUItem4=/Game/_Core/_Enemies/BP_Kronen
+MRUItem5=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Reload_Anim
+MRUItem6=/Game/_Core/_Weapons/Shotgun
+MRUItem7=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_50_DM
+MRUItem8=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_25_DM
+MRUItem9=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_75_DM
+MRUItem10=/Game/_Level/_LevelAssets/_OGFiles/blood_BaseColor
+MRUItem11=/Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M
+MRUItem12=/Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_DM
+MRUItem13=/Game/_Core/BPInterfaces/BPI_GetDamage
+MRUItem14=/Game/_Core/BPInterfaces/BPI_Player
+MRUItem15=/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif
+MRUItem16=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
+MRUItem17=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Enemy
+MRUItem18=/Game/_Core/_Enemies/_Animations/ABP_KrononSlow
+MRUItem19=/Game/_Core/_Player/_PlayerAnimations/_Animations/Knife/Carpenter_Knife_Slash1_Anim
+MRUItem20=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Capr_BS
+MRUItem21=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Pistol_Shoot_Anim
+MRUItem22=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Shotgun_Shoot_Anim
+MRUItem23=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns/Carpenter_Rifle_Shoot_Anim
+MRUItem24=/Game/_Core/_Player/_PlayerAnimations/_blendSpace/Carp_AnimBP
+MRUItem25=/Game/_Core/_Player/IF_Character
+MRUItem26=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
+MRUItem27=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
+MRUItem28=/Game/_Core/_Enemies/Slugger_Enemy/TheSlugger_Animations_Walk1
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -399,6 +388,7 @@ DI_Player_C.Tick=True
 DI_Player_C.Widgets=True
 DI_Player_C.ComponentTick=True
 DI_Player_C.Player Variables=True
+DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
 DI_Player_C.Weapon Info=True
@@ -1205,6 +1195,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -1565,7 +1556,6 @@ BoneProxy.Bone=True
 BoneProxy.Transforms=True
 ClothingAssetCommon.Config=True
 ClothingAssetCommon.Import=True
-DI_Player_C.Weapon Info =True
 Carp_AnimBP_C.Default=True
 Carp_AnimBP_C.RootMotion=True
 Carp_AnimBP_C.Notifies=True
@@ -1627,7 +1617,6 @@ ABP_KrononSlow_C.RootMotion=True
 ABP_KrononSlow_C.Notifies=True
 ABP_KrononSlow_C.Montage=True
 AttackNotif_C.AnimNotify=True
-Texture2D.Interchange =True
 MaterialExpressionBumpOffset.MaterialExpressionBumpOffset=True
 MaterialExpressionBumpOffset.MaterialExpression=True
 MaterialExpressionIf.MaterialExpressionIf=True
@@ -1645,6 +1634,7 @@ MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
 MaterialExpressionPanner.MaterialExpressionPanner=True
 MaterialExpressionPanner.MaterialExpression=True
+DI_Player_C.Weapon Info =True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1889,6 +1879,7 @@ DeleteConfirmationVariable_Warning=False
 /Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_DM.Carp_DM=0
 /Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M.Carp_M=0
 /Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_50_DM.Carp_Injured_50_DM=0
+/Game/_Core/BPInterfaces/BPI_EnnemyDammage.BPI_EnnemyDammage=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
