--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,8 +174,8 @@ MRUItem0=/Game/_Level/Island
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 InputAction=
 K2Node_VariableGet=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
-DI_Player_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
-SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
+DI_Player_C=
+SkeletalMeshComponent=
 BP_KronenFemale_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect
 BP_KronenFast_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
 BP_Kronen_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup
@@ -240,10 +240,10 @@ Bp_Knive_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappi
 LastLevel=/Game/_Level/Island
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -312,7 +312,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.535812318
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/_Core/_Player/_PlayerAnimations/_Animations/Guns
+ContentBrowserTab1.SelectedPaths=
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1880,6 +1880,7 @@ DeleteConfirmationVariable_Warning=False
 /Game/_Core/_Player/_Assets/_Textures/_Meterials/Carp_M.Carp_M=0
 /Game/_Core/_Player/_Assets/_Textures/_Textures/Carp_Injured_50_DM.Carp_Injured_50_DM=0
 /Game/_Core/BPInterfaces/BPI_EnnemyDammage.BPI_EnnemyDammage=1
+/Game/_Core/_Player/_PlayerAnimations/_Animations/Axe/Carpenter_Axe_Slash_Anim.Carpenter_Axe_Slash_Anim=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
