--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -176,8 +176,8 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 InputAction=
 K2Node_VariableGet=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
 DI_Player_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
-SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
-BP_KronenFemale_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
+SkeletalMeshComponent=
+BP_KronenFemale_C=
 BP_KronenFast_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
 BP_Kronen_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
 CapsuleComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
@@ -250,6 +250,7 @@ SoundsRandom_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.M
 BP_DeathZOne_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,BP_boss_C.Physics.ConstraintsGroup
 CamSwitchActor_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,BP_boss_C.Physics.ConstraintsGroup
 Object=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
+CharacterMovementComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
 
 [EditorStartup]
 LastLevel=/Game/_Level/Island
@@ -257,6 +258,9 @@ LastLevel=/Game/_Level/Island
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=Behavior Tree
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
@@ -284,16 +288,10 @@ RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/_Core/_Enemies/BP_Kronen.BP_Kronen
 OpenAssetsAtExit=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Kronen.BHT_Kronen
 OpenAssetsAtExit=/Game/_Core/_Enemies/_AiSystems/_BHT/BB_Enemy.BB_Enemy
-OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1.KronenMale_Animations_Attack1
-OpenAssetsAtExit=/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif.AttackNotif
-OpenAssetsAtExit=/Game/_Core/_Enemies/BP_KronenFast.BP_KronenFast
-OpenAssetsAtExit=/Game/_Core/_Enemies/BP_KronenFemale.BP_KronenFemale
+OpenAssetsAtExit=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Charger.BHT_Charger
+OpenAssetsAtExit=/Game/_Core/_Enemies/_AiSystems/_BHT/BB_Enemy.BB_Enemy
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -368,36 +366,36 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/BP_KronenFemale
-MRUItem1=/Game/_Core/_Enemies/BP_KronenFast
-MRUItem2=/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif
-MRUItem3=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
-MRUItem4=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Kronen
-MRUItem5=/Game/_Core/_Enemies/BP_Kronen
-MRUItem6=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchActor
-MRUItem7=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitch
-MRUItem8=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet_Paper_Hung
-MRUItem9=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet_Paper_Roll
-MRUItem10=/Game/_Level/_LevelAssets/_Props/_Materials/Plastic_Mat
-MRUItem11=/Game/_Level/_LevelAssets/_Props/_Materials/Plastic_Texture
-MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Silver_Metal_Mat
-MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Silver_Metal_Texture
-MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Toilet_Paper_Mat
-MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Toilet_Paper_Texture
-MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Carpet_M
-MRUItem17=/Game/_Level/_LevelAssets/_Props/_Furniture/Small_Trash_Bin
-MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/Small_Trash_Bin_Mat
-MRUItem19=/Game/_Level/_LevelAssets/_Props/_Materials/Small_Trash_Bin_Texture
-MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/Vase1_Mat
-MRUItem21=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
-MRUItem22=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
-MRUItem23=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
-MRUItem24=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger
-MRUItem25=/Game/_Core/_Enemies/BP_Slugger
-MRUItem26=/Game/_Core/NPCs/The_Old_Man/Textures/TheOldManTextures_01
-MRUItem27=/Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001
-MRUItem28=/Game/_Core/NPCs/The_Old_Man/The_Old_Man
-MRUItem29=/Game/_Core/NPCs/Ferry_Man/Textures/FerryMaTextures_01
+MRUItem0=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Charger
+MRUItem1=/Game/_Core/_Enemies/BP_Charger
+MRUItem2=/Game/_Core/_Enemies/BP_KronenFemale
+MRUItem3=/Game/_Core/_Enemies/BP_KronenFast
+MRUItem4=/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif
+MRUItem5=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
+MRUItem6=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Kronen
+MRUItem7=/Game/_Core/_Enemies/BP_Kronen
+MRUItem8=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchActor
+MRUItem9=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitch
+MRUItem10=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet_Paper_Hung
+MRUItem11=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet_Paper_Roll
+MRUItem12=/Game/_Level/_LevelAssets/_Props/_Materials/Plastic_Mat
+MRUItem13=/Game/_Level/_LevelAssets/_Props/_Materials/Plastic_Texture
+MRUItem14=/Game/_Level/_LevelAssets/_Props/_Materials/Silver_Metal_Mat
+MRUItem15=/Game/_Level/_LevelAssets/_Props/_Materials/Silver_Metal_Texture
+MRUItem16=/Game/_Level/_LevelAssets/_Props/_Materials/Toilet_Paper_Mat
+MRUItem17=/Game/_Level/_LevelAssets/_Props/_Materials/Toilet_Paper_Texture
+MRUItem18=/Game/_Level/_LevelAssets/_Props/_Materials/Carpet_M
+MRUItem19=/Game/_Level/_LevelAssets/_Props/_Furniture/Small_Trash_Bin
+MRUItem20=/Game/_Level/_LevelAssets/_Props/_Materials/Small_Trash_Bin_Mat
+MRUItem21=/Game/_Level/_LevelAssets/_Props/_Materials/Small_Trash_Bin_Texture
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Materials/Vase1_Mat
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Furniture/Vase1
+MRUItem24=/Game/_Core/_Enemies/Slugger_Enemy/Textures/SluggerTexture
+MRUItem25=/Game/_Core/_Enemies/Slugger_Enemy/Textures/Slugger
+MRUItem26=/Game/_Core/_Enemies/Slugger_Enemy/The_Slugger
+MRUItem27=/Game/_Core/_Enemies/BP_Slugger
+MRUItem28=/Game/_Core/NPCs/The_Old_Man/Textures/TheOldManTextures_01
+MRUItem29=/Game/_Core/NPCs/The_Old_Man/Textures/Old_Man_001
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -1840,8 +1838,9 @@ K2Node_Composite.Inputs=True
 K2Node_Composite.Outputs=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/_Core/_Enemies/BP_KronenFemale.BP_KronenFemale;
+RecentlyPlaced=/Game/_Core/_Enemies/BP_Charger.BP_Charger;
 RecentlyPlaced=/Game/_Core/_Enemies/BP_KronenFast.BP_KronenFast;
+RecentlyPlaced=/Game/_Core/_Enemies/BP_KronenFemale.BP_KronenFemale;
 RecentlyPlaced=/Game/_Core/_Enemies/BP_Kronen.BP_Kronen;
 RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Furniture/Small_Trash_Bin.Small_Trash_Bin;
 RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet_Paper_Hung.Toilet_Paper_Hung;
@@ -1851,7 +1850,6 @@ RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet.Toilet;
 RecentlyPlaced=/Game/_Level/_LevelAssets/_Props/_Furniture/Bathroom_Sink.Bathroom_Sink;
 RecentlyPlaced=/Game/_Level/_LevelAssets/KillZone/BP_DeathZOne.BP_DeathZOne;
 RecentlyPlaced=/Game/_Core/_Enemies/BP_Slugger.BP_Slugger;
-RecentlyPlaced=/Game/_Core/_Enemies/BP_Charger.BP_Charger;
 RecentlyPlaced=/Game/_Core/_Enemies/BP_Bulky.BP_Bulky;
 RecentlyPlaced=/Game/_Core/_Player/DI_Player.DI_Player;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -2218,7 +2216,7 @@ BP_Kronen_C=
 BP_Bulky_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 BP_Slugger_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 BP_KronenFast_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-BP_KronenFemale_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+BP_KronenFemale_C=
 DI_Player_C=
 AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" "
 AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
