Bulky Fixet Removed Muly Textures

--- a/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DeepInfection/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -180,7 +180,7 @@ SkeletalMeshComponent=InputMappingContext.Mappings.ActionMappings,InputMappingCo
 BP_KronenFemale_C=
 BP_KronenFast_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
 BP_Kronen_C=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
-CapsuleComponent=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup,BP_Charger_C.Physics.ConstraintsGroup
+CapsuleComponent=
 Character=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup,BP_Charger_C.Physics.ConstraintsGroup
 K2Node_CallFunction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,CameraComponent.TransformCommon.Transform,CapsuleComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,BP_boss_C.Physics.ConstraintsGroup
 StaticMeshActor=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/_Core/_Player/_Inputs/_IA/IA_WeaponSelect.IA_WeaponSelect,StaticMeshComponent.Physics.ConstraintsGroup,CapsuleComponent.Collision.Collision,CameraComponent.TransformCommon.Transform,BP_boss_C.Physics.ConstraintsGroup,BP_Charger_C.Physics.ConstraintsGroup
@@ -295,6 +295,7 @@ RecentAssetEditors=MaterialEditor
 OpenAssetsAtExit=/Game/_Core/_Enemies/BP_Charger.BP_Charger
 OpenAssetsAtExit=/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif.AttackNotif
 OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk.Enemy_Kronen_Bulk
+OpenAssetsAtExit=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Skeleton.Enemy_Kronen_Bulk_Skeleton
 OpenAssetsAtExit=/Game/_Core/_Enemies/BP_Bulky.BP_Bulky
 
 [ContentBrowser]
@@ -370,36 +371,36 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk
-MRUItem1=/Game/_Core/_Enemies/BP_Bulky
-MRUItem2=/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif
-MRUItem3=/Game/_Core/_Enemies/_Animations/BS_Charger
-MRUItem4=/Game/_Core/_Enemies/_Animations/ABP_Charger
-MRUItem5=/Game/_Core/_Enemies/_Charger/Enemy_Charger_PhysicsAsset
-MRUItem6=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Skeleton
-MRUItem7=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Attack
-MRUItem8=/Game/_Core/_Enemies/_Charger/Enemy_Charger
-MRUItem9=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main
-MRUItem10=/Game/_Core/BPInterfaces/BPI_GetDamage
-MRUItem11=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Charger
-MRUItem12=/Game/_Core/_Enemies/BP_Charger
-MRUItem13=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Charger
-MRUItem14=/Game/_Core/_Enemies/BP_KronenFemale
-MRUItem15=/Game/_Core/_Enemies/BP_KronenFast
-MRUItem16=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
-MRUItem17=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Kronen
-MRUItem18=/Game/_Core/_Enemies/BP_Kronen
-MRUItem19=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchActor
-MRUItem20=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitch
-MRUItem21=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet_Paper_Hung
-MRUItem22=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet_Paper_Roll
-MRUItem23=/Game/_Level/_LevelAssets/_Props/_Materials/Plastic_Mat
-MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/Plastic_Texture
-MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Silver_Metal_Mat
-MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Silver_Metal_Texture
-MRUItem27=/Game/_Level/_LevelAssets/_Props/_Materials/Toilet_Paper_Mat
-MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Toilet_Paper_Texture
-MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Carpet_M
+MRUItem0=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk_Skeleton
+MRUItem1=/Game/_Core/_Enemies/Kronen_Bulky/Enemy_Kronen_Bulk
+MRUItem2=/Game/_Core/_Enemies/BP_Bulky
+MRUItem3=/Game/_Core/_Enemies/_Animations/Notifiers/AttackNotif
+MRUItem4=/Game/_Core/_Enemies/_Animations/BS_Charger
+MRUItem5=/Game/_Core/_Enemies/_Animations/ABP_Charger
+MRUItem6=/Game/_Core/_Enemies/_Charger/Enemy_Charger_PhysicsAsset
+MRUItem7=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Skeleton
+MRUItem8=/Game/_Core/_Enemies/_Charger/Enemy_Charger_Attack
+MRUItem9=/Game/_Core/_Enemies/_Charger/Enemy_Charger
+MRUItem10=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Main
+MRUItem11=/Game/_Core/BPInterfaces/BPI_GetDamage
+MRUItem12=/Game/_Core/_Enemies/_AiSystems/_Brain/Enemy_CTR_Charger
+MRUItem13=/Game/_Core/_Enemies/BP_Charger
+MRUItem14=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Charger
+MRUItem15=/Game/_Core/_Enemies/BP_KronenFemale
+MRUItem16=/Game/_Core/_Enemies/BP_KronenFast
+MRUItem17=/Game/_Core/_Enemies/Kronen_Male/KronenMale_Animations_Attack1
+MRUItem18=/Game/_Core/_Enemies/_AiSystems/_BHT/BHT_Kronen
+MRUItem19=/Game/_Core/_Enemies/BP_Kronen
+MRUItem20=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitchActor
+MRUItem21=/Game/_Level/_LevelAssets/_CamSwitcher/CamSwitch
+MRUItem22=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet_Paper_Hung
+MRUItem23=/Game/_Level/_LevelAssets/_Props/_Furniture/Toilet_Paper_Roll
+MRUItem24=/Game/_Level/_LevelAssets/_Props/_Materials/Plastic_Mat
+MRUItem25=/Game/_Level/_LevelAssets/_Props/_Materials/Plastic_Texture
+MRUItem26=/Game/_Level/_LevelAssets/_Props/_Materials/Silver_Metal_Mat
+MRUItem27=/Game/_Level/_LevelAssets/_Props/_Materials/Silver_Metal_Texture
+MRUItem28=/Game/_Level/_LevelAssets/_Props/_Materials/Toilet_Paper_Mat
+MRUItem29=/Game/_Level/_LevelAssets/_Props/_Materials/Toilet_Paper_Texture
 
 [DetailCategories]
 DI_Player_C.TransformCommon=True
@@ -1872,6 +1873,7 @@ ABP_Charger_C.RootMotion=True
 ABP_Charger_C.Notifies=True
 ABP_Charger_C.Montage=True
 AnimationStateGraph.GraphBlending=True
+SkeletalMeshSocket.Socket Parameters=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/_Core/_Enemies/BP_Bulky.BP_Bulky;
